--- a/todo-aspnetmvc-ui/Views/Item/Edit.cshtml
+++ b/todo-aspnetmvc-ui/Views/Item/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit the task</h1>
 
-<h4>TodoItem</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,13 +24,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value="@State.NotStarted">Not Started</option>
+                    <option value="@State.InProgress">In Progress</option>
+                    <option value="@State.Completed">Completed</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IsHidden" class="control-label"></label>
-                <input asp-for="IsHidden" class="form-control" />
-                <span asp-validation-for="IsHidden" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreationDate" class="control-label"></label>
@@ -49,14 +47,15 @@
                 <span asp-validation-for="ToDoListId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <div class="btn-group" role="group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+                <div class="btn-group" role="group">
+                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                </div>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
