--- a/todo-aspnetmvc-ui/Views/Shared/_Layout.cshtml
+++ b/todo-aspnetmvc-ui/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Todo" asp-action="Index">Show all lists</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Item" asp-action="Index">Show all items</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                 </ul>
@@ -44,6 +47,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="js/itemScripts.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
