--- a/todo-aspnetmvc-ui/Views/Todo/Create.cshtml
+++ b/todo-aspnetmvc-ui/Views/Todo/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create new List</h1>
 
-<h4>TodoList</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -22,20 +21,15 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    @Html.CheckBox("IsHidden", false, new { @class = "form-check-input" })
-                    @Html.DisplayNameFor(m => m.IsHidden)
-                </label>
-            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="btn-group" role="group">
+                    <input type="submit" value="Create" class="btn btn-primary"/>
+                </div>
+                <div class="btn-group" role="group">
+                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                </div>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
