--- a/todo-aspnetmvc-ui/Views/Todo/Details.cshtml
+++ b/todo-aspnetmvc-ui/Views/Todo/Details.cshtml
@@ -4,33 +4,34 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details of the list</h1>
 
 <div>
-    <h4>TodoList</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            Title
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            Description
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHidden)
+            Items
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsHidden)
+            @Model.Items.Count
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="btn-group" role="group">
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Edit</a>
+</div>
+<div class="btn-group" role="group">
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
