--- a/todo-aspnetmvc-ui/Views/Todo/Edit.cshtml
+++ b/todo-aspnetmvc-ui/Views/Todo/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit the list</h1>
 
-<h4>TodoList</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,19 +22,18 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsHidden" /> @Html.DisplayNameFor(model => model.IsHidden)
-                </label>
-            </div>
+            <div class="form-group"></div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <div class="btn-group" role="group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+                <div class="btn-group" role="group">
+                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
